service-mesh/control-plane/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: sample-app-gw
  namespace: istio-system
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/sync-wave: "2"
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      # tls:
      #   mode: SIMPLE
      #   credentialName: ingress-certs
      hosts:
        - "*"
