service-mesh/control-plane/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: sample-app-vs
  namespace: istio-system
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/sync-wave: "2"
spec:
  hosts: 
  - "*"
  gateways:
  - sample-app-gw
  http:
  - name: "header-based and mirroring"
    match:
    - headers:
        env:
          exact: dev
    mirror:
      host: sample-app.dev.svc.cluster.local
      subset: v4
    route:
    - destination:
        host: sample-app.dev.svc.cluster.local
        subset: v3

  - name: "header-based and chaos testing"
    fault:
      abort:
        httpStatus: 503
        percentage:
          value: 75
    match:
    - headers:
        fail:
          exact: "true"
    route:
    - destination:
        host: sample-app.dev.svc.cluster.local
        subset: v5

  - name: "path-based with retry"
    match:
    - uri:
        exact: "/api/v1/fail"
    retries:
      attempts: 5
      perTryTimeout: 2s
      retryOn: "5xx,retriable-4xx"
    route:
    - destination:
        host: sample-app.dev.svc.cluster.local
        subset: v6

  - name: "Default rule with canary deployment"
    route:
    - destination:
        host: sample-app.dev.svc.cluster.local
        subset: v1
      weight: 80
    - destination:
        host: sample-app.dev.svc.cluster.local
        subset: v2
      weight: 20
